syntax = "proto3";
import "google/protobuf/any.proto";
package pigyrent.dto;


// The request message containing the user's name.
message mdlRequestData {
  string requestId= 1;
}

// The response message containing the greetings.
message mdlReturnData {  
    enmReturnStatus status=1;
    string messages=2;
	google.protobuf.Any dataObject = 3;
     
}

message mdlReturnList{  
    enmReturnStatus status=1;
    string messages=2;
	repeated google.protobuf.Any dataObject = 3;     
}

enum enmReturnStatus{
	None=0;
    Success=1;
    Error=2;
    Warning=3;
    Info=4;
}
